Issue #SB-14002 fix: Button vertical alignment issue

--- a/src/app/client/src/assets/styles/components/_buttons.scss
+++ b/src/app/client/src/assets/styles/components/_buttons.scss
@@ -28,6 +28,7 @@ a.sb-btn {
   min-width: ($base-block-space * 8);
   @include border-radius(3px);
   position: relative;
+  line-height: 1.5;
   text: {
     transform: capitalize;
     decoration: none;
@@ -660,4 +661,8 @@ a.sb-btn {
   to {
     transform: scale3d(1, 1, 1);
   }
+}
+
+*[lang="hi"] .sb-btn-xs {
+  line-height: 2.2;
 }
